--- a/app/src/main/res/drawable/ic_signal_cellular_4_bar_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_signal_cellular_4_bar_black_24dp.xml
@@ -1,5 +1,10 @@
-<vector android:height="64dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M2,22h20V2z"/>
+<vector android:height="64dp"
+    android:tint="#FFFFFF"
+    android:viewportHeight="24.0"
+    android:viewportWidth="24.0"
+    android:width="64dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M2,22h20V2z" />
 </vector>
