--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:openDrawer="start"
+    tools:visibility="visible">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ConstraintLayout"
@@ -13,7 +15,7 @@
         tools:context=".MainActivity">
 
         <tech.scolton.netrace.views.WaveView
-            android:id="@+id/waveView"
+            android:id="@+id/WaveView"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -40,6 +42,7 @@
                 android:layout_marginBottom="0dp"
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/nav_graph"
+                tools:ignore="FragmentTagUsage"
                 tools:visibility="visible" />
         </FrameLayout>
 
@@ -48,7 +51,6 @@
             style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
             android:layout_width="40sp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/menu"
             android:textColor="@color/textWhite"
