--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,6 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
     app:startDestination="@+id/mainFragment">
 
     <fragment
@@ -10,15 +9,12 @@
         android:name="tech.scolton.netrace.fragments.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" />
-    <fragment
-        android:id="@+id/pingFragment"
-        android:name="tech.scolton.netrace.fragments.PingFragment"
-        android:label="PingFragment" />
 
-    <action
-        android:id="@+id/action_global_pingFragment"
-        app:destination="@id/pingFragment" />
-    <action
-        android:id="@+id/action_global_mainFragment"
-        app:destination="@id/mainFragment" />
+    <action app:destination="@id/mainFragment"
+        android:id="@+id/action_global_mainFragment2"/>
+    <fragment
+        android:id="@+id/pingFragment2"
+        android:name="tech.scolton.netrace.fragments.PingFragment"
+        android:label="fragment_ping"
+        tools:layout="@layout/fragment_ping" /><action android:id="@+id/action_global_pingFragment2" app:destination="@id/pingFragment2"/>
 </navigation>
